welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:12: error: not found: value O
		setCouleurBrosse(T(O))
                                   ^