welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
	var T = new Array[Color](getMondeHauteur)
	for (i <- 0 to T.length - 1) {
		T(i)=getCouleurSol()
		avance()
	}
	for(i<-2 to getMondeLargeur()) {
		gauche()
		avance()
		droite()
		avance()
		setCouleurBrosse(T(O))
		baisseBrosse()
		leveBrosse()
		avance()
		for (j <- 1 to getMondeHauteur() - 1) {
			setCouleurBrosse(T(j))
			baisseBrosse()
			leveBrosse()
			avance()
		}
	}
}

